# transsnip

./: .gitignore  README.md  TransSnip.spec  installer.iss  pyproject.toml  run.bat  run_transsnip.py
.claude/: settings.json
.claude/skills/add-ocr-engine/: SKILL.md
.claude/skills/add-translator-provider/: SKILL.md
.claude/skills/debug-overlay/: SKILL.md
.claude/skills/test-mode-flow/: SKILL.md
.claude/skills/translate-prompt-tuning/: SKILL.md
.claude/skills/write-mentor-doc/: SKILL.md
resources/models/: README.md
scripts/: fetch_models.py
tests/: test_history.py  test_image_utils.py  test_ocr_assembly.py  test_ocr_routing.py  test_retry.py  test_segment.py  test_settings.py  test_word_breakdown.py
transsipUI/: .design-canvas.state.json  .thumbnail  TransSnip Redesign v1 (3 directions).html  TransSnip Redesign.html  about.css  app.jsx  empty.css  onboarding.css  overlays.css  popup.css  settings.css  styles.css  surface-about.jsx  surface-empty.jsx  surface-onboarding.jsx  surface-overlays.jsx  surface-popup.jsx  surface-settings.jsx  surface-system.jsx  system.css  tokens.jsx
transsnip/: __main__.py  app.py
transsnip/capture/: region_selector.py  screen.py
transsnip/config/: history.py  keyring_store.py  settings.py
transsnip/display/: floating_popup.py  inline_overlay.py  subtitle_bar.py
transsnip/hotkeys/: manager.py
transsnip/linguistic/: ipa.py  word_breakdown.py
transsnip/modes/: video_subtitle.py
transsnip/ocr/: base.py  models.py  rapid_ocr.py  registry.py  segment.py  windows_ocr.py  worker.py
transsnip/translate/: base.py  cache.py  claude.py  gemini.py  google_free.py  openrouter.py  registry.py  worker.py
transsnip/tray/: tray_icon.py
transsnip/tts/: edge_tts_player.py  sapi.py
transsnip/ui/: about_dialog.py  atoms.py  history_window.py  icons.py  settings_window.py  theme.py  toast.py  tokens.py
transsnip/utils/: image.py  retry.py
web/mockup/: index.html
