[project]
name = "transsnip"
version = "0.1.0"
description = "Screen translation app for Windows — hotkey-driven OCR + multi-provider translation with context-aware results"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "orms147", email = "orms147@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    # GUI
    "PySide6>=6.7.0",
    # Screen capture
    "mss>=9.0.1",
    "Pillow>=10.2.0",
    # System tray (PySide6 has QSystemTrayIcon, but pystray is a fallback)
    "pystray>=0.19.5",
    # Global hotkeys
    "keyboard>=0.13.5",
    # Config & API key storage
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "keyring>=24.3.0",
    # HTTP
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
ocr = [
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
    # RapidOCR: PaddleOCR's models served via ONNX Runtime. Same accuracy as
    # paddleocr but ~12x smaller bundle (~50MB vs ~600MB), no PaddlePaddle framework
    # required. Sweet spot cho local OCR trên máy yếu + distribution.
    "rapidocr-onnxruntime>=1.3.0",
]
translate = [
    # LLM-based providers (context-aware, paid)
    "anthropic>=0.25.0",
    "google-generativeai>=0.8.0",
    "openai>=1.20.0",
    # Translation-only providers
    "deepl>=1.17.0",
    "deep-translator>=1.11.0",  # wraps Google Translate / Linguee / Pons — no API key needed
]
tts = [
    "edge-tts>=6.1.10",
    "sounddevice>=0.4.6",
]
learning = [
    "eng-to-ipa>=0.0.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
transsnip = "transsnip.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transsnip"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
